--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:lighthouse": "lhci autorun",
-    "generate-assets": "node scripts/build-assets.js",
+    "generate-assets": "tsx scripts/build-assets.ts",
     "export": "next build && next export"
   },
   "dependencies": {
@@ -36,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
