--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,25 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:lighthouse": "lhci autorun",
     "generate-assets": "tsx scripts/build-assets.ts",
     "export": "next build && next export"
   },
   "dependencies": {
-    "@lhci/cli": "^0.15.1",
-    "@playwright/test": "^1.55.0",
-    "@types/jest": "^30.0.0",
-    "jest": "^29.7.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
-    "playwright": "^1.55.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "ts-jest": "^29.4.4"
+    "shadcn-ui": "latest",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
