feat(assets): add PNG compression script and optimize @sites images\n\n- Add script at frontend/scripts/compress-sites.ts\n- Wire npm script compress:sites in frontend/package.json\n- Optimize PNGs under frontend/public/sites (lossless palette + high compression)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "compress:sites": "tsx scripts/compress-sites.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -24,7 +25,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "sharp": "15.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
