--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "sharp": "15.2.0"
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
